# wot-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: publish.yml
src/: lib.rs
src/core/: Cargo.toml
src/core/src/: lib.rs  types.rs
src/nostr/: Cargo.toml
src/nostr/src/: lib.rs  types.rs
