[package]
name = "wot-nostr"
version = "0.1.1"
edition = "2021"
authors = ["Kehiy <me@kehiy.net>"]
description = "Nostr integration for wot-rs"
license = "MIT"
repository = "https://github.com/kehiy/wot-rs"
readme = "../../README.md"
keywords = ["wot", "trust", "nostr", "network"]
categories = ["algorithms", "network-programming"]

[dependencies]
wot-core = { version = "0.1", path = "../core" }
